v1.7.1 - Hotfix & BBA Compatibility

Bugfixes:
 - Fixed Spanish Carlists not coming to power properly when completing the decision "Install the Carlist Monarchy"
 - Fixed Russian tech categories not applying to MTG stuff
 - Fixed Scoping error in the Spanish Demand Andorra Events

Localisation:
 - Spanish localization improvements for the tree

v1.7 - Make Millennium Dawn Great Again

AI:
 - Improved Generic Tree AI
 - Economic AI should now evaluate taxes and raise and lower as needed
 - AI will produce better units
 - AI will now invest in infrastructure
 - AI will invest until 6% interest rate and then stop to focus on debt maintenance
 - AI will now produce equipment more effectively to provide a more robust AI
 - AI in Africa and Western ENG should no longer support the Nigerian Caliphate
 - Nigeria has a couple additional AI strategies to be more dominant in the ECOAWS region
 - Nigeria's AI should be a bit more dynamic now
 - AI should be more aggressive at paying down debt
 - Russia should have better war declaration AI

Balance:
 - Econ Cycle Upgrade is now 7.50% of your current GDP
 - Healthcare/Social Spending are now more expensive for lower GDP/C nations
 - Rebalanced Cost and gain from certain Afghan focuses
 - Rebalanced Afghanistan Tribal Culture to not be too punishing now that other PP
 - Reduced influence from SCO decisions

Bugfixes:
 - AFG "Claim Pakistani Paschustani" reworked
 - Adjusted Special Forces Tree and NVG position
 - AFG Our Nation Recovered Bug Taliban Could Not Complete Focus
 - Generic Tree Infrastructure and Radar Station focuses can now be bypassed
 - Generic Tree Interventionism avaliable for Salafist Outlook
 - Reduced Riau Islands Starting Internet Station to 1
 - Corrected Southern Illinois Incident Typo
 - Demand the Return of the Crimea state corrected
 - Capital of Georgia is now correctly labeled as Tbilisi
 - Fixed land doctrines cost reduction in focus trees
 - Fixed incorrect tag lookup for Moldova in faction checks