@@ -660,7 +660,7 @@ EP_vhc_cat = {
 
 		available = { NOT = { tag = KOR } }
 
-		icon = korea
+		icon = south_korea
 
 		days_remove = 150 ##APC
 		days_re_enable = 10
