@@ -8,7 +8,7 @@ focus_tree = {
 			tag = ARM
 		}
 	}
-	continuous_focus_position = { x = 2300 y = 700}
+	continuous_focus_position = { x = 1800 y = 600 }
 	default = no
 	focus = {
 		id = ARM_Kocharjan
