@@ -946,7 +946,7 @@ focus_tree = {
 
 	#AZE_eatern_focus
 	focus = {
-		id = AZE_aze_eatern_focus
+		id = AZE_aze_eastern_focus
 		icon = attack_iran
 		x = 0
 		y = 1
@@ -974,8 +974,8 @@ focus_tree = {
 		icon = anti_immigration1
 		x = -1
 		y = 1
-		relative_position_id = AZE_aze_eatern_focus
-		prerequisite = { focus = AZE_aze_eatern_focus }
+		relative_position_id = AZE_aze_eastern_focus
+		prerequisite = { focus = AZE_aze_eastern_focus }
 		cost = 10
 		search_filters = {
 			FOCUS_FILTER_FRA_POLITICAL_VIOLENCE
@@ -1007,8 +1007,8 @@ focus_tree = {
 		icon = war4
 		x = 1
 		y = 1
-		relative_position_id = AZE_aze_eatern_focus
-		prerequisite = { focus = AZE_aze_eatern_focus }
+		relative_position_id = AZE_aze_eastern_focus
+		prerequisite = { focus = AZE_aze_eastern_focus }
 		cost = 10
 		search_filters = { FOCUS_FILTER_POLITICAL }
 
