@@ -11,14 +11,14 @@ focus_tree = {
 	}
 
 	#Author: tasos/bobguy
-	continuous_focus_position = { x = 3020 y = 550 }
+	continuous_focus_position = { x = 1850 y = 600 }
 
 	#economics
 	focus = {
 		id = GRE_unemployed
 		icon = welfare
 
-		x = 19
+		x = 10
 		y = 0
 
 		cost = 5
@@ -1008,7 +1008,7 @@ focus_tree = {
 		id = GRE_h_armed
 		icon = hellenic_armed_forces
 
-		x = 35
+		x = 28
 		y = 0
 
 		cost = 10
@@ -1017,8 +1017,6 @@ focus_tree = {
 		ai_will_do = {
 			factor = 1
 		}
-
-
 
 		complete_tooltip = { }
 		completion_reward = {
@@ -1841,7 +1839,7 @@ focus_tree = {
 		id = GRE_turn_century
 		icon = Greece_republic2
 
-		x = 72
+		x = 66
 		y = 0
 
 		cost = 10
@@ -1850,14 +1848,12 @@ focus_tree = {
 			factor = 20
 		}
 
-
-
 		complete_tooltip = { }
-	 search_filters = { FOCUS_FILTER_POLITICAL }
-	 completion_reward = {
-			log = "[GetDateText]: [This.GetName]: GRE_turn_century executed"
-			add_political_power = 100
-		}
+		search_filters = { FOCUS_FILTER_POLITICAL }
+		completion_reward = {
+				log = "[GetDateText]: [This.GetName]: GRE_turn_century executed"
+				add_political_power = 100
+			}
 	}
 	focus = {
 		id = GRE_the_hellenic_republic
