@@ -68,7 +68,7 @@ on_actions = {
 						country_event = { id = canada.703 days = 5 random_days = 5 }
 					}
 					10 = { #Quebec Polls in support of the government
-						modifier ={
+						modifier = {
 							factor = 2.5
 							check_variable = { french_happiness_var > 79 }
 						}
