@@ -888,8 +888,8 @@ technologies = {
 		research_cost = 2.5
 		start_year = 1990
 
-		research_speed_factor = 0.03
-		production_lack_of_resource_penalty_factor = 0.05
+		research_speed_factor = 0.05
+		production_lack_of_resource_penalty_factor = -0.10
 
 		path = {
 			leads_to_tech = sociable_machines
