@@ -689,9 +689,7 @@ country_event = { #Quebec Supports the Government
 	option = {
 		name = canada.704.a
 		log = "[GetDateText]: [Root.GetName]: event canada.704.a"
-
 	}
-
 }
 
 #Air Canada acquires Canadian Airlines
