@@ -176,7 +176,7 @@ country_event = {
 		set_temp_variable = { threat_change = radicalization }
 		divide_temp_variable = { threat_change = 5 }
 		multiply_temp_variable = { threat_change = 0.3 }
-		clamp_temp_variable = { var = threat_change min = 0 max = 10 }
+		clamp_temp_variable = { var = threat_change min = 1 max = 10 }
 		modify_terror_threat_effect = yes
 
 		set_temp_variable = { party_index = 11 }
