@@ -67,7 +67,7 @@
  AZE_aze_fortify_region: "Fortify Region"
  AZE_aze_fortify_region_desc: "We need to fortify the region to keep it safe"
  AZE_aze_dab_on_armen: "Dab On Armenians"
- AZE_aze_dab_on_armen_desc: "Armenians think of themselves too much, we should dhow them their place"
+ AZE_aze_dab_on_armen_desc: "Armenians think of themselves too much, we should show them their place"
  AZE_aze_denote_dipld: "Denote Diplmatic Efforts"
  AZE_aze_denote_dipld_desc: "We need to work in our diplomatic sphere to stop our enemies from achieving their goals"
  AZE_aze_chal_bro_dip: "Challenge Influence"
@@ -78,8 +78,8 @@
  AZE_aze_eastern_problem_desc: "Iran is our bigger problem, we shall focus on them first"
  AZE_aze_agency_focus: "Agency Focus"
  AZE_aze_agency_focus_desc: "We need a proper intelligence agency for the future opearitions."
- AZE_aze_eatern_focus: "Eatern Focus"
- AZE_aze_eatern_focus_desc: "We shall focus on our eastern problems to fix our position"
+ AZE_aze_eastern_focus: "Eastern Focus"
+ AZE_aze_eastern_focus_desc: "We shall focus on our eastern problems to fix our position"
  AZE_aze_arrest_their_spies: "Arrest Their Spies"
  AZE_aze_arrest_their_spies_desc: "Our state is plagued with enemy spies, we shall arrest all of them"
  AZE_aze_prepare_the_border: "Prepare The Border"
