@@ -737,8 +737,8 @@
  canada.703.c: "Reject his friviolous statements"
 
  canada.704.t: "Quebec Supports the Government"
- canada.704.d: ""
- canada.704.a: ""
+ canada.704.d: "Some polls have shown that the current government has high support among Quebec residents"
+ canada.704.a: "Good news"
 
  #Keystone Pipeline
  keystonepipeline_can.0.t: "Planning of the Keystone Pipeline begins"
