@@ -301,7 +301,7 @@
 #Political Tree
  USA_focus_pushing_the_anti_smoking_initiative: "Pushing the Anti-Smoking Initiative"
  USA_focus_pushing_the_anti_smoking_initiative_desc: "The citizens need healthier lives and as such we must push campaigns to show the negative effects of the tobacco industry as a whole."
- USA_focus_dealing_with_anti_globalist_protest: "Dealing with Anti-Globalist Protest"
+ USA_focus_dealing_with_anti_globalist_protest: "Dealing with Anti-Globalization Protest"
  USA_focus_dealing_with_anti_globalist_protest_desc: "Agitators have come to protest our recent changes towards better integrating and cooperating with foreign economies, as such we must deal with these ignorant individuals in a discreet manner when in the eyes of the public."
  USA_focus_state_visit_to_vietnam: "State Visit to Vietnam"
  USA_focus_state_visit_to_vietnam_desc: "The history of our relations with Vietnam is shakey, but it's better to be late to remedy this than to sit and let a passive build of tension arise. As such we must conduct a state visit to Vietnam."
