@@ -18,29 +18,21 @@
  attack_submarine_desc: ""
  missile_submarine: "Missile Submarines"
  missile_submarine_desc: "The silent killers of the worlds oceans, these undersea warfare platforms incorporate a range of useful abilities, including stealth, intelligence gathering, and weapon systems."
- battleship_hull_1: "Battleships"
- battleship_hull_1_desc: ""
+ battle_cruiser: "Battlecruisers"
+ battle_cruiser_desc: ""
  battle_cruiser_hull_1: "Battlecruisers"
  battle_cruiser_hull_1_desc: ""
- battleship_hull_2: "Battleships"
- battleship_hull_2_desc: ""
  battle_cruiser_hull_2: "Battlecruisers"
  battle_cruiser_hull_2_desc: ""
- battleship_hull_3: "Battleships"
- battleship_hull_3_desc: ""
  battle_cruiser_hull_3: "Battlecruisers"
  battle_cruiser_hull_3_desc: ""
-
- corvette: "Corvettes"
- frigate: "Frigates"
- destroyer: "Destroyers"
- stealth_destroyer: "Stealth Destroyers"
- cruiser: "Cruisers"
- helicopter_operator: "Helicopter Operators"
- carrier: "Carriers"
- attack_submarine: "Attack Submarines"
- missile_submarine: "Missile Submarines"
- battleship: "Battleships"
- battle_cruiser: "Battlecruisers"
+ battleship_hull_0: "Battleships"
+ battleship_hull_0_desc: ""
+ battleship_hull_1: "Battleships"
+ battleship_hull_1_desc: ""
+ battleship_hull_2: "Battleships"
+ battleship_hull_2_desc: ""
+ battleship_hull_3: "Battleships"
+ battleship_hull_3_desc: ""
 
 
