@@ -4,9 +4,16 @@ Bugfixes:
  - Fixed Spanish Carlists not coming to power properly when completing the decision "Install the Carlist Monarchy"
  - Fixed Russian tech categories not applying to MTG stuff
  - Fixed Scoping error in the Spanish Demand Andorra Events
+ - Fixed flag for South Korea in Equipment Purchasing decisions
+ - Fixed continuous focus position for Armenia and Greece
+ - Fixed effects from technology Machine Learning
+ - Fixed increase by 0 terror threat in radicalization event
 
 Localisation:
  - Spanish localization improvements for the tree
+ - Fixed spelling/grammar for USA focus and for Azerbaijani focus
+ - Fixed localisation for event Quebec Supports the Government
+ - Fixed localisation for Battleship technology
 
 v1.7 - Make Millennium Dawn Great Again
 
